2012-07-03 Roman
- DAQ, DAQ.JavaLikeCalc, UI.QTCfg, UI.Vision: Attribute "font" is added to syntax highlight rules root node for set default font config.
    Default font for JavaLikeCalc programms is set to "Courier".
- FIX:LibsDB.vcaBase: DAQ parameters check is fixed for "Parameters selection dialog for graphics".


2012-07-01 Roman
- Archive: Data combining mode selection is added for combining data from the high resolution buffer to
    the low resolution archivator. Implemented combining modes: "Moving average", "Single", "Minimum", "Maximum".
    Combining mode "Moving average" has implemented for Boolean type by weight 0.5.


2012-06-29 Roman
- DAQ:Data active flag is added to a parameter and an attribute of DAQ by function dataActive().
- !:FIX:Archive: Restore value archive's starting on set by function setSrcMode().
    Fix archives enabling for active data sources.
    Archiving data on active mode is made only for active data source, for restoring archives at start from reserve allow.
    New path type to archiving source processing error is fixed for holes data fill from reserve at request.
- DAQ.SoundCard: Check for allowed samplerates and placing it to combo is added.


2012-06-25 Roman
- FIX:Protocol.HTTP: Incomplete HTTP header processing is added, observed on packages from SSL transport.


2012-06-23 Roman
- TConfig: Exceptions processing is added to cfgChange() for revert changes.
- Transport.Serial: Exit from data mode command is added (typical "+++") which used first, next PreInit timeout and next HangUp.
- !!!:DAQ.System: Periodic checking for new devices add to Automatic mode is added.
    Temporary data storage is added to parameter context, individual for DA type. Used for CPU info.
    Parameter's error processing is added for all DA types.
    Attributes "Read speed (B/s)" and "Write speed (B/s)" is added to DA_HDDSTAT.
    Attributes "Receive speed (B/s)" and "Transmit speed (B/s)" is added to DA_NETSTAT.


2012-06-20 Roman