@@ -287,9 +287,11 @@ class TSYS : public TCntrNode
 		enum Flgs	{ Detached = 0x01, FinishTask = 0x02 };
 
 		//Methods
-		STask( ) : thr(0), policy(0), prior(0), flgs(0), tm_beg(0), tm_end(0), tm_per(0), tm_pnt(0)		{ }
+		STask( ) : thr(0), policy(0), prior(0), flgs(0), tm_beg(0), tm_end(0), tm_per(0), tm_pnt(0),
+		    cycleLost(0)	{ }
 		STask( pthread_t ithr, char ipolicy, char iprior ) :
-		    thr(ithr), policy(ipolicy), prior(iprior), flgs(0), tm_beg(0), tm_end(0), tm_per(0), tm_pnt(0)	{ }
+		    thr(ithr), policy(ipolicy), prior(iprior), flgs(0), tm_beg(0), tm_end(0), tm_per(0), tm_pnt(0),
+		    cycleLost(0)	{ }
 
 		//Attributes
 		string		path;
@@ -300,7 +302,7 @@ class TSYS : public TCntrNode
 		void *(*task) (void *);
 		void		*taskArg;
 		unsigned	flgs;
-		int64_t		tm_beg, tm_end, tm_per, tm_pnt;
+		int64_t		tm_beg, tm_end, tm_per, tm_pnt, cycleLost;
 	};
 
 	//Private methods
